# tekton-python-demo

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
