
[project]
name = "tekton-python-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "rudeigerc", email = "rudeigerc@gmail.com"},
]
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false
